Debugging Django App

--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -1,1 +1,8 @@
-<h1>Hello World from template</h1>
+{% if name %}
+<h1>Hello {{name}} from template</h1>
+
+{%else %}
+
+<h1>Hello World</h1>
+
+{%endif%}
