Debugging Django App using django-debug-toolbar

--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -1,3 +1,5 @@
+<html>
+<body>
 {% if name %}
 <h1>Hello {{name}} from template</h1>
 
@@ -6,3 +8,5 @@
 <h1>Hello World</h1>
 
 {%endif%}
+</body>
+</html>
